--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/hello-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/hello-view.fxml
@@ -32,6 +32,7 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -80,7 +81,17 @@
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <ScrollPane layoutY="58.0" prefHeight="494.0" prefWidth="254.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+                        <ScrollPane fx:id="bill" layoutY="58.0" prefHeight="494.0" prefWidth="254.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
+                     <content>
+                        <Label fx:id="billText" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="357.0" prefWidth="244.0">
+                           <font>
+                              <Font name="Arial" size="16.0" />
+                           </font>
+                           <padding>
+                              <Insets left="20.0" top="10.0" />
+                           </padding>
+                        </Label>
+                     </content></ScrollPane>
                         <GridPane layoutX="20.0" layoutY="576.0" prefHeight="36.0" prefWidth="254.0" AnchorPane.bottomAnchor="64.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <columnConstraints>
                                 <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="101.0" />
@@ -95,7 +106,7 @@
                                         <Font size="17.0" />
                                     </font>
                                 </Label>
-                                <Label alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
+                                <Label fx:id="totalPrice" alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
                                     <font>
                                         <Font size="17.0" />
                                     </font>
