--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/hello-view.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/hello-view.fxml
@@ -45,7 +45,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="971.0" prefWidth="1487.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
+<VBox prefHeight="954.0" prefWidth="1647.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
     <children>
         <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="526.0" prefWidth="1068.0" VBox.vgrow="ALWAYS">
             <children>
@@ -135,17 +135,17 @@
                     </font></Button>
             <GridPane GridPane.columnIndex="3">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button alignment="CENTER" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="42.0" prefWidth="107.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="EXIT" textFill="WHITE" />
-                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="52.0" prefWidth="215.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
+                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="23.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="EXIT" textFill="WHITE" />
+                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="48.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
                      <GridPane.margin>
-                        <Insets left="20.0" />
+                        <Insets left="10.0" right="20.0" />
                      </GridPane.margin>
                   </Button>
                </children>
