--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -45,23 +45,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="954.0" prefWidth="1647.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
+<VBox prefHeight="954.0" prefWidth="1647.0" stylesheets="@styles.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.xsolutions.AppController">
     <children>
-        <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="526.0" prefWidth="1068.0" VBox.vgrow="ALWAYS">
+        <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="526.0" prefWidth="1068.0" stylesheets="@styles.css" VBox.vgrow="ALWAYS">
             <children>
-                <AnchorPane prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #D9D9D9;" HBox.hgrow="ALWAYS">
+                <AnchorPane prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #D9D9D9;" styleClass="text" stylesheets="@styles.css" HBox.hgrow="ALWAYS">
                     <children>
-                        <Label layoutX="21.0" layoutY="14.0" prefHeight="36.0" prefWidth="60.0" text="Tische" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="14.0">
+                        <Label layoutX="21.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Tische" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="14.0">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                  <ListView fx:id="tablesListView" fixedCellSize="40.0" layoutX="2.0" layoutY="50.0" prefHeight="201.0" prefWidth="233.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+                  <ListView fx:id="tablesListView" fixedCellSize="40.0" layoutX="2.0" layoutY="50.0" prefHeight="201.0" prefWidth="233.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" styleClass="l" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
                     </children>
                 </AnchorPane>
                 <AnchorPane maxWidth="872.0" prefHeight="676.0" prefWidth="868.0">
                     <children>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" text="Produkte" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Produkte" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
                             <font>
                                 <Font size="18.0" />
                             </font>
@@ -71,14 +71,14 @@
                 </AnchorPane>
                 <AnchorPane prefHeight="464.0" prefWidth="479.0" style="-fx-background-color: D9D9D9; -fx-border-radius: 50%;">
                     <children>
-                        <Button id="pay_btn" fx:id="pay_btn" layoutX="20.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="214.0" style="-fx-background-color: #9E9E9E; -fx-background-radius: 31px; -fx-font-size: 17px; -fx-text-fill: #ffffff;" stylesheets="@styles.css" text="Bezahlen" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+                        <Button id="pay_btn" fx:id="pay_btn" layoutX="79.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="327.0" style="-fx-background-color: #9E9E9E; -fx-background-radius: 31px; -fx-font-size: 18px; -fx-text-fill: #ffffff;" stylesheets="@styles.css" text="Bezahlen" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" text="Rechnung" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Rechnung" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
                             <font>
-                                <Font size="18.0" />
+                                <Font name="Poor Richard" size="18.0" />
                             </font>
                         </Label>
                         <ScrollPane fx:id="bill" layoutY="58.0" prefHeight="494.0" prefWidth="254.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="110.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0">
@@ -101,17 +101,17 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                             </rowConstraints>
                             <children>
-                                <Label prefHeight="36.0" prefWidth="124.0" text="Gesamtpreis:">
+                                <Label prefHeight="36.0" prefWidth="124.0" style="-fx-font-size: 15px;" text="Gesamtpreis:">
+                                    <font>
+                                        <Font size="18.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="totalPrice" alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" style="-fx-font-size: 15px;" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
                                     <font>
                                         <Font size="17.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="totalPrice" alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
-                                    <font>
-                                        <Font size="17.0" />
-                                    </font>
-                                </Label>
-                                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="491.0" prefWidth="252.0" style="-fx-border-width: 0;" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+                                <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="491.0" prefWidth="252.0" style="-fx-border-width: 0; -fx-font-size: 15px;" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
                             </children>
                         </GridPane>
                     </children>
@@ -143,7 +143,7 @@
               </rowConstraints>
                <children>
                   <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="23.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="EXIT" textFill="WHITE" />
-                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" prefHeight="48.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
+                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#userLogout" prefHeight="48.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" right="20.0" />
                      </GridPane.margin>
