--- a/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
+++ b/src/main/resources/at/ac/fhcampuswien/xsolutions/main.fxml
@@ -37,6 +37,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -51,7 +52,7 @@
             <children>
                 <AnchorPane prefHeight="464.0" prefWidth="461.0" style="-fx-background-color: #D9D9D9;" styleClass="text" stylesheets="@styles.css" HBox.hgrow="ALWAYS">
                     <children>
-                        <Label layoutX="21.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Tische" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="14.0">
+                        <Label layoutX="21.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Tische" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
                             <font>
                                 <Font size="18.0" />
                             </font>
@@ -61,22 +62,48 @@
                 </AnchorPane>
                 <AnchorPane maxWidth="872.0" prefHeight="676.0" prefWidth="868.0">
                     <children>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Produkte" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
-                            <font>
-                                <Font size="18.0" />
-                            </font>
+                  <GridPane layoutY="-1.0" prefHeight="62.0" prefWidth="814.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints halignment="RIGHT" hgrow="NEVER" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                              <Label prefHeight="36.0" prefWidth="114.0" styleClass="text" stylesheets="@styles.css" text="Produkte">
+                                  <font>
+                                      <Font size="18.0" />
+                                  </font>
+                           <GridPane.margin>
+                              <Insets left="20.0" />
+                           </GridPane.margin>
+                              </Label>
+                        <TextField fx:id="searchField" maxWidth="400.0" prefHeight="25.0" prefWidth="320.0" promptText="Suche" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <GridPane.margin>
+                              <Insets />
+                           </GridPane.margin>
+                        </TextField>
+                        <Label prefHeight="36.0" prefWidth="114.0" styleClass="text" stylesheets="@styles.css" GridPane.columnIndex="2">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
                         </Label>
-                        <ScrollPane layoutY="56.0" prefHeight="494.0" prefWidth="651.0" style="-fx-background-color: transparent;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
+                     </children>
+                  </GridPane>
+                  <Label fx:id="searchResult" alignment="CENTER" contentDisplay="CENTER" layoutX="292.0" layoutY="424.0" prefHeight="17.0" prefWidth="231.0" text="Keine Produkte wurden gefunden" />
+                  <ListView fx:id="productsListView" fixedCellSize="40.0" layoutX="-7.0" layoutY="61.0" prefHeight="804.0" prefWidth="824.0" style="-fx-background-color: transparent; -fx-font-size: 15px;" styleClass="l" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="60.0" />
                     </children>
                 </AnchorPane>
                 <AnchorPane prefHeight="464.0" prefWidth="479.0" style="-fx-background-color: D9D9D9; -fx-border-radius: 50%;">
                     <children>
-                        <Button id="pay_btn" fx:id="pay_btn" layoutX="79.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="327.0" style="-fx-background-color: #9E9E9E; -fx-background-radius: 31px; -fx-font-size: 18px; -fx-text-fill: #ffffff;" stylesheets="@styles.css" text="Bezahlen" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
+                        <Button id="pay_btn" fx:id="pay_btn" layoutX="79.0" layoutY="597.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="327.0" style="-fx-background-color: #9E9E9E; -fx-font-weight: 700; -fx-background-radius: 31px; -fx-font-size: 18px; -fx-text-fill: #ffffff;" stylesheets="@styles.css" text="Bezahlen" textFill="WHITE" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Button>
-                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Rechnung" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0">
+                        <Label layoutX="14.0" layoutY="14.0" prefHeight="36.0" prefWidth="150.0" styleClass="text" stylesheets="@styles.css" text="Rechnung" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="14.0">
                             <font>
                                 <Font name="Poor Richard" size="18.0" />
                             </font>
@@ -101,12 +128,12 @@
                                 <RowConstraints minHeight="10.0" prefHeight="30.0" />
                             </rowConstraints>
                             <children>
-                                <Label prefHeight="36.0" prefWidth="124.0" style="-fx-font-size: 15px;" text="Gesamtpreis:">
+                                <Label prefHeight="36.0" prefWidth="124.0" style="-fx-font-size: 15px; -fx-font-weight: 700;" text="Gesamtpreis:">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
                                 </Label>
-                                <Label fx:id="totalPrice" alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" style="-fx-font-size: 15px;" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
+                                <Label fx:id="totalPrice" alignment="CENTER_RIGHT" prefHeight="36.0" prefWidth="150.0" style="-fx-font-size: 15px; -fx-font-weight: 700;" text="0$" textAlignment="RIGHT" GridPane.columnIndex="1">
                                     <font>
                                         <Font size="17.0" />
                                     </font>
@@ -142,10 +169,10 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="23.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="EXIT" textFill="WHITE" />
-                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#userLogout" prefHeight="48.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
+                  <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onMouseClicked="#exitButton" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #a82b2b; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Exit" textFill="WHITE" />
+                      <Button alignment="CENTER" contentDisplay="RIGHT" mnemonicParsing="false" nodeOrientation="LEFT_TO_RIGHT" onAction="#userLogout" prefHeight="30.0" prefWidth="281.0" style="-fx-background-color: #6666; -fx-background-radius: 31px; -fx-font-size: 18px;" text="Abmelden" textFill="WHITE" GridPane.columnIndex="1">
                      <GridPane.margin>
-                        <Insets left="10.0" right="20.0" />
+                        <Insets left="10.0" right="25.0" />
                      </GridPane.margin>
                   </Button>
                </children>
